[package]
name = "rlp"
version = "0.1.0"
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/TraceBundy/parity-common"
license = "MIT OR Apache-2.0"
authors = ["TraceBundy yangzhou221@gmail.com"]
edition = "2020"

[dependencies]
rustc-hex = { version = "2.0.1", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
hex-literal = "0.2.1"
primitive-types = { path = "../primitive-types", version = "0.7", features = ["impl-rlp"] }

[features]
default = ["std"]
std = ["rustc-hex/std"]

[[bench]]
name = "rlp"
path = "benches/rlp.rs"
harness = false
